# pointcloud-processing

./: .gitignore  README.md  extract_sensor_poses_per_scan.py  extract_vehicle_path_points.py  read_bag_file_output_pointcloud_and_trajectory_ply.py
voxel_ws/src/: CMakeLists.txt
voxel_ws/src/c_plus_plus_voxelization/: CMakeLists.txt  package.xml  view_voxel.ipynb
voxel_ws/src/c_plus_plus_voxelization/include/: bag_data_reader.h  process_voxelization.h  projected_point.h  transform_adjuster.h  voxelization.h
voxel_ws/src/c_plus_plus_voxelization/msg/: raw_loadcell.msg  weight.msg
voxel_ws/src/c_plus_plus_voxelization/src/: bag_data_reader.cpp  main.cpp  process_voxelization.cpp  transform_adjuster.cpp  voxelization.cpp
